# Portfolio-Site

./: .gitignore  1_🏠_Home.py  README.md  pyproject.toml  run.sh
.streamlit/: config.toml
pages/: 2_☀️_SkinScreen.py  3_🥣_Cereal_Nutrition.py  4_☁️_Machine_Learning_API.py  5_💬_BoolQ_NLP_Research.py  6_ℹ️_About_me.py  7_🪺_For_Fun.py
src/: 1_🏠_Home.py  bio.txt  run.sh
src/.streamlit/: config.toml
src/pages/: 2_ℹ_About_me.py  2_☀️_SkinScreen.py  3_ℹ_About_me.py  3_🥣_Cereal_Nutrition.py  4_ℹ_About_me.py  4_☁️_Machine_Learning_API.py  5_ℹ️_About_me.py  5_💬_BoolQ_NLP_Research.py  6_ℹ️_About_me.py
src/static/json/: timeline.json
src/utils/: GPT_utils.py
static/cereal/: cereal.html  milk.html
static/nlp/: NLP_code.html  NLP_code.ipynb
static/timeline/: timeline.json
utils/: __init__.py
