[tool.poetry]
name = "Portfolio-Site"
version = "0.1.0"
description = ""
authors = ["ANDREW HIGGINS <AJHIGGINS96@BERKELEY.EDU>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.33.0"
streamlit-timeline = "*"
streamlit-lottie = "*"
openai = "^1.26.0"
llama-index = "^0.10.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
