[tool.poetry]
name = "Portfolio-Site"
version = "0.1.0"
description = ""
authors = ["ANDREW HIGGINS <AJHIGGINS96@BERKELEY.EDU>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "1.34.0"
streamlit-timeline = "*"
streamlit-lottie = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
